qttesting: update the submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -11,6 +11,7 @@
 [submodule "ThirdParty/QtTesting/vtkqttesting"]
 	path = ThirdParty/QtTesting/vtkqttesting
 	url = https://gitlab.kitware.com/paraview/qttesting.git
+	branch = for/paraview
 [submodule "ThirdParty/cinema/vtkcinemapython"]
 	path = ThirdParty/cinema/vtkcinemapython
 	url = https://gitlab.kitware.com/cinema/cinema_python.git
