InSituExodus: update to the new module system

--- a/Plugins/InSituExodus/CMakeLists.txt
+++ b/Plugins/InSituExodus/CMakeLists.txt
@@ -1,13 +1,7 @@
-include_directories(${VTK_INCLUDE_DIRS})
+paraview_add_plugin(InSituExodus
+  VERSION             "1.0"
+  SERVER_MANAGER_XML  InSituExodus.xml)
 
-add_paraview_plugin(
-  InSituExodus
-  "1.0"
-  DESCRIPTION "Experimental memory-conserving Exodus II file reader."
-  SERVER_MANAGER_XML InSituExodus.xml
-)
-
-# Add testing if necessary
-if(BUILD_TESTING)
+if (BUILD_TESTING)
   add_subdirectory(Testing)
-endif()
+endif ()
