--- a/Plugins/InSituExodus/Testing/CMakeLists.txt
+++ b/Plugins/InSituExodus/Testing/CMakeLists.txt
@@ -1,15 +1,13 @@
-if(PARAVIEW_BUILD_QT_GUI)
-
-  include(ParaViewTestingMacros)
-
+if (PARAVIEW_BUILD_QT_GUI)
   set(test_xmls
-    ${CMAKE_CURRENT_SOURCE_DIR}/InSituExodusPluginTest.xml
+    InSituExodusPluginTest.xml
   )
 
-  add_client_tests("pv"
+  paraview_add_client_tests(
     BASELINE_DIR ${PARAVIEW_TEST_BASELINE_DIR}
+    TEST_DATA_TARGET ParaViewData
     TEST_SCRIPTS ${test_xmls}
     LOAD_PLUGIN "InSituExodus"
   )
 
-endif()
+endif ()
