--- a/Plugins/NetCDFTimeAnnotationPlugin/Testing/CMakeLists.txt
+++ b/Plugins/NetCDFTimeAnnotationPlugin/Testing/CMakeLists.txt
@@ -1,15 +1,16 @@
-include(ParaViewTestingMacros)
-
 if (PARAVIEW_BUILD_QT_GUI AND BUILD_SHARED_LIBS)
-  paraview_test_load_data(NetCDFTimeAnnotationPlugin tos_O1_2001-2002.nc)
+  ExternalData_Expand_Arguments("ParaViewData" _
+    "DATA{Data/tos_O1_2001-2002.nc}")
 
-  add_client_tests("pv"
+  paraview_add_client_tests(
     LOAD_PLUGIN "NetCDFTimeAnnotationPlugin"
     BASELINE_DIR ${PARAVIEW_TEST_BASELINE_DIR}
-    TEST_SCRIPTS ${CMAKE_CURRENT_SOURCE_DIR}/NetCDFTimeAnnotationFilter.xml)
+    TEST_DATA_TARGET ParaViewData
+    TEST_SCRIPTS NetCDFTimeAnnotationFilter.xml)
 
-  add_client_server_tests("pvcs"
+  paraview_add_client_server_tests(
     LOAD_PLUGIN "NetCDFTimeAnnotationPlugin"
     BASELINE_DIR ${PARAVIEW_TEST_BASELINE_DIR}
-    TEST_SCRIPTS ${CMAKE_CURRENT_SOURCE_DIR}/NetCDFTimeAnnotationFilter.xml)
-endif()
+    TEST_DATA_TARGET ParaViewData
+    TEST_SCRIPTS NetCDFTimeAnnotationFilter.xml)
+endif ()
