--- a/Plugins/NonOrthogonalSource/Testing/CMakeLists.txt
+++ b/Plugins/NonOrthogonalSource/Testing/CMakeLists.txt
@@ -1,27 +1,25 @@
-if (NOT PARAVIEW_BUILD_QT_GUI)
-  return()
-endif()
-
-include(ParaViewTestingMacros)
 set (xmls
-  ${CMAKE_CURRENT_SOURCE_DIR}/NonOrthogonalSliceView.xml
-  ${CMAKE_CURRENT_SOURCE_DIR}/NonOrthographicOrthographicView.xml
+  NonOrthogonalSliceView.xml
+  NonOrthographicOrthographicView.xml
 )
 
 set (NonOrthogonalSliceView_FORCE_SERIAL TRUE)
 
-add_client_tests("pv"
+paraview_add_client_tests(
   LOAD_PLUGIN "NonOrthogonalSource"
   BASELINE_DIR ${PARAVIEW_TEST_BASELINE_DIR}
+  TEST_DATA_TARGET ParaViewData
   TEST_SCRIPTS ${xmls}
 )
-add_client_server_tests("pvcs"
+paraview_add_client_server_tests(
   LOAD_PLUGIN "NonOrthogonalSource"
   BASELINE_DIR ${PARAVIEW_TEST_BASELINE_DIR}
+  TEST_DATA_TARGET ParaViewData
   TEST_SCRIPTS ${xmls}
 )
-add_client_render_server_tests("pvcrs"
+paraview_add_client_server_render_tests(
   LOAD_PLUGIN "NonOrthogonalSource"
   BASELINE_DIR ${PARAVIEW_TEST_BASELINE_DIR}
+  TEST_DATA_TARGET ParaViewData
   TEST_SCRIPTS ${xmls}
 )
