OpenVR: update to the new module system

--- a/Plugins/OpenVR/CMakeLists.txt
+++ b/Plugins/OpenVR/CMakeLists.txt
@@ -1,60 +1,43 @@
+find_package(Qt5 REQUIRED COMPONENTS Widgets Network)
 
-# This plugin adds OpenVR support to paraview
-# it requires that your VTK be built with the
-# openVR module
+set(interfaces)
+set(sources
+  pvOpenVRDockPanel.cxx
+  pvOpenVRDockPanel.h
+  vtkPVOpenVRHelper.cxx
+  vtkPVOpenVRHelper.h)
 
-cmake_minimum_required(VERSION 3.3)
+paraview_plugin_add_dock_window(
+  CLASS_NAME pvOpenVRDockPanel
+  DOCK_AREA Left
+  INTERFACES dock_interfaces
+  SOURCES dock_sources)
+list(APPEND interfaces
+  ${dock_interfaces})
+list(APPEND sources
+  ${dock_sources})
 
-# Find and Include ParaView
-if(NOT ParaView_SOURCE_DIR)
-  FIND_PACKAGE(ParaView REQUIRED)
-  INCLUDE(${PARAVIEW_USE_FILE})
-else()
-  include_directories(${VTK_INCLUDE_DIRS})
-endif()
+paraview_add_plugin(OpenVR
+  VERSION "1.1"
+  UI_FILES pvOpenVRDockPanel.ui
+  INTERFACES ${interfaces}
+  SOURCES ${sources})
 
-# Set a consistent MACOSX_RPATH default across all CMake versions.
-# When CMake 2.8.12 is required, change this default to 1.
-# When CMake 3.0.0 is required, remove this block (see CMP0042).
-if(NOT DEFINED CMAKE_MACOSX_RPATH)
-  set(CMAKE_MACOSX_RPATH 0)
-endif()
-
-IF(PARAVIEW_BUILD_QT_GUI)
-
-  include(ParaViewQt)
-  pv_find_package_qt(qt_targets REQUIRED
-                QT5_COMPONENTS Widgets Network)
-
-  pv_qt_wrap_cpp(MOC_SRCS
-    pvOpenVRDockPanel.h
-    )
-
-  pv_qt_wrap_ui(UI_SRCS
-    pvOpenVRDockPanel.ui
-    )
-
-  ADD_PARAVIEW_DOCK_WINDOW(
-    OUTIFACES
-    OUTSRCS
-    CLASS_NAME pvOpenVRDockPanel
-    DOCK_AREA Left
-    )
-
-  ADD_PARAVIEW_PLUGIN(OpenVR "1.1"
-    GUI_INTERFACES ${OUTIFACES}
-    GUI_SOURCES ${OUTSRCS} ${MOC_SRCS} ${UI_SRCS} 
-    pvOpenVRDockPanel.cxx 
-    vtkPVOpenVRHelper.cxx
-    )
-
-  target_link_libraries (OpenVR
-    LINK_PRIVATE
-      pqApplicationComponents
-      vtkPVServerManagerRendering
-      vtkRenderingOpenVR
-      ${qt_targets}
-      ${OPENVR_LIBRARY}
-    )
-
-ENDIF()
+target_link_libraries(OpenVR
+  PRIVATE
+    ParaView::ClientServerCoreRendering
+    ParaView::Common
+    ParaView::ServerManagerCore
+    ParaView::ServerManagerRendering
+    ParaView::VTKExtensionsRendering
+    VTK::CommonCore
+    VTK::CommonDataModel
+    VTK::IOCore
+    VTK::IOImage
+    VTK::IOXML
+    VTK::IOXMLParser
+    VTK::InteractionWidgets
+    VTK::RenderingCore
+    VTK::RenderingOpenGL2
+    VTK::RenderingOpenVR
+    VTK::ViewsCore)
