--- a/Plugins/StreamingParticles/CMakeLists.txt
+++ b/Plugins/StreamingParticles/CMakeLists.txt
@@ -1,84 +1,34 @@
-#--------------------------------------------------
-# Find and Use ParaView
-#--------------------------------------------------
-if (ParaView_SOURCE_DIR)
-  include_directories( ${PARAVIEW_INCLUDE_DIRS} ${VTK_INCLUDE_DIRS})
-else()
-  find_package(ParaView REQUIRED)
-  include(${PARAVIEW_USE_FILE})
-endif()
+vtk_module_scan(
+  MODULE_FILES      "${CMAKE_CURRENT_SOURCE_DIR}/Particles/vtk.module"
+  REQUEST_MODULES   StreamingParticles::vtkStreamingParticles
+  PROVIDES_MODULES  particles_modules
+  REQUIRES_MODULES  required_modules
+  HIDE_MODULES_FROM_CACHE ON)
 
-add_paraview_plugin(StreamingParticles "1.0"
-  SERVER_MANAGER_XML StreamingParticles.xml
-  SERVER_MANAGER_SOURCES
-    vtkStreamingParticlesRepresentation.cxx
-    vtkStreamingParticlesRepresentation.h
-    vtkStreamingParticlesPriorityQueue.cxx
-    vtkStreamingParticlesPriorityQueue.h
-    vtkPVRandomPointsStreamingSource.cxx
-    vtkPVRandomPointsStreamingSource.h
-)
+if (required_modules)
+  foreach (required_module IN LISTS required_modules)
+    if (NOT TARGET "${required_module}")
+      message(FATAL_ERROR
+        "Failed to find the required module ${required_module}.")
+    endif ()
+  endforeach ()
+endif ()
 
-if(PARAVIEW_ENABLE_COSMOTOOLS
-    AND BUILD_TESTING
-    AND PARAVIEW_BUILD_QT_GUI)
-    include(ParaViewTestingMacros)
-    paraview_test_load_data_dirs(StreamingParticles
-      adaptive-cosmo
-      )
+list(INSERT CMAKE_MODULE_PATH 0
+  "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
-    add_pv_test("pv" "_DISABLE_C"
-      COMMAND --client ${CLIENT_EXECUTABLE}
-              --enable-bt
-              -dr
-              --enable-streaming
-              --test-directory=${PARAVIEW_TEST_DIR}
-              --test-plugin=StreamingParticles
-      BASELINE_DIR ${PARAVIEW_TEST_BASELINE_DIR}
-      TEST_SCRIPTS ${CMAKE_CURRENT_SOURCE_DIR}/Testing/StreamingParticles.xml
-      )
-    paraview_test_load_data_dirs(NewGenericIOStreaming
-      multiresolution-streaming
-      )
-    add_pv_test("pv" "_DISABLE_C"
-      COMMAND --client ${CLIENT_EXECUTABLE}
-              --enable-bt
-              -dr
-              --mpi
-              --enable-streaming
-              --test-directory=${PARAVIEW_TEST_DIR}
-              --test-plugin=StreamingParticles
-      BASELINE_DIR ${PARAVIEW_TEST_BASELINE_DIR}
-      TEST_SCRIPTS ${CMAKE_CURRENT_SOURCE_DIR}/Testing/NewGenericIOStreaming.xml
-      )
-    add_pv_test("pvcs" "_DISABLE_CS"
-      COMMAND --server-np 2
-              --server $<TARGET_FILE:pvserver>
-              --enable-bt --enable-streaming
-              --test-plugin=StreamingParticles
-              --client ${CLIENT_EXECUTABLE}
-              --enable-bt
-              -dr
-              --mpi
-              --enable-streaming
-              --test-directory=${PARAVIEW_TEST_DIR}
-              --test-plugin=StreamingParticles
-      BASELINE_DIR ${PARAVIEW_TEST_BASELINE_DIR}
-      TEST_SCRIPTS ${CMAKE_CURRENT_SOURCE_DIR}/Testing/NewGenericIOStreaming.xml
-      )
-    add_pv_test("pvcrs" "_DISABLE_CRS"
-      COMMAND --server-np 2
-              --server $<TARGET_FILE:pvserver>
-              --enable-bt --enable-streaming
-              --test-plugin=StreamingParticles
-              --client ${CLIENT_EXECUTABLE}
-              --enable-bt
-              -dr
-              --mpi
-              --enable-streaming
-              --test-directory=${PARAVIEW_TEST_DIR}
-              --test-plugin=StreamingParticles
-      BASELINE_DIR ${PARAVIEW_TEST_BASELINE_DIR}
-      TEST_SCRIPTS ${CMAKE_CURRENT_SOURCE_DIR}/Testing/NewGenericIOStreaming.xml
-      )
-endif()
+vtk_module_build(
+  MODULES             ${particles_modules}
+  PACKAGE             StreamingParticles
+  INSTALL_HEADERS     OFF
+  LIBRARY_NAME_SUFFIX "pv${PARAVIEW_VERSION_MAJOR}.${PARAVIEW_VERSION_MINOR}"
+  VERSION             "${PARAVIEW_VERSION}"
+  SOVERSION           "1")
+
+paraview_add_plugin(StreamingParticles
+  VERSION "1.0"
+  MODULES StreamingParticles::vtkStreamingParticles)
+
+if (BUILD_TESTING)
+  add_subdirectory(Testing)
+endif ()
