--- a/Plugins/StreamLinesRepresentation/Testing/CMakeLists.txt
+++ b/Plugins/StreamLinesRepresentation/Testing/CMakeLists.txt
@@ -1,16 +1,17 @@
-include(ParaViewTestingMacros)
-
 if (PARAVIEW_BUILD_QT_GUI AND BUILD_SHARED_LIBS)
-  add_client_tests("pv"
+  paraview_add_client_tests(
     LOAD_PLUGIN "StreamLinesRepresentation"
     BASELINE_DIR ${PARAVIEW_TEST_BASELINE_DIR}
-    TEST_SCRIPTS ${CMAKE_CURRENT_SOURCE_DIR}/StreamLinesRepresentationColor.xml)
-  add_client_tests("pv"
+    TEST_DATA_TARGET ParaViewData
+    TEST_SCRIPTS StreamLinesRepresentationColor.xml)
+  paraview_add_client_tests(
     LOAD_PLUGIN "StreamLinesRepresentation"
     BASELINE_DIR ${PARAVIEW_TEST_BASELINE_DIR}
-    TEST_SCRIPTS ${CMAKE_CURRENT_SOURCE_DIR}/StreamLinesRepresentationThick.xml)
-  add_client_tests("pv"
+    TEST_DATA_TARGET ParaViewData
+    TEST_SCRIPTS StreamLinesRepresentationThick.xml)
+  paraview_add_client_tests(
     LOAD_PLUGIN "StreamLinesRepresentation"
     BASELINE_DIR ${PARAVIEW_TEST_BASELINE_DIR}
-    TEST_SCRIPTS ${CMAKE_CURRENT_SOURCE_DIR}/StreamLinesRepresentationTransform.xml)
-endif()
+    TEST_DATA_TARGET ParaViewData
+    TEST_SCRIPTS StreamLinesRepresentationTransform.xml)
+endif ()
