--- a/Plugins/GMVReader/Testing/CMakeLists.txt
+++ b/Plugins/GMVReader/Testing/CMakeLists.txt
@@ -1,29 +1,31 @@
-INCLUDE(ParaViewTestingMacros)
+set(suffix "")
+if (PARAVIEW_ENABLE_VISITBRIDGE AND VISIT_BUILD_READER_GMV)
+  string(APPEND suffix "_WithVisitBridge")
+endif ()
 
-SET(_SUFFIX "")
-IF(VISIT_BUILD_READER_GMV)
-   SET(_SUFFIX "${_SUFFIX}_WithVisitBridge")
-ENDIF()
-
-SET(GMV_READER_TESTS
-  ${CMAKE_CURRENT_SOURCE_DIR}/GMVReaderBasicRead${_SUFFIX}.xml
-  ${CMAKE_CURRENT_SOURCE_DIR}/GMVReaderInvalidFiles${_SUFFIX}.xml
+set(GMV_READER_TESTS
+  GMVReaderBasicRead${suffix}.xml
+  GMVReaderInvalidFiles${suffix}.xml
 )
-SET(GMVReaderBasicRead${_SUFFIX}_BREAK TRUE)
-SET(GMVReaderInvalidFiles${_SUFFIX}_BREAK TRUE)
 
-IF (PARAVIEW_BUILD_QT_GUI)
-  add_client_tests("pv"
+if (PARAVIEW_BUILD_QT_GUI)
+  paraview_add_client_tests(
     BASELINE_DIR ${PARAVIEW_TEST_BASELINE_DIR}
     TEST_SCRIPTS ${GMV_READER_TESTS}
+    TEST_DATA_TARGET ParaViewData
     LOAD_PLUGIN "GMVReader"
   )
-  SET_PROPERTY(TEST "pv.GMVReaderInvalidFiles${_SUFFIX}" PROPERTY PASS_REGULAR_EXPRESSION "client0 process exited with code 0")
+  set_property(TEST "pv.GMVReaderInvalidFiles${suffix}"
+    PROPERTY
+      PASS_REGULAR_EXPRESSION "client0 process exited with code 0")
 
-  add_client_server_tests("pvcs"
+  paraview_add_client_server_tests(
     BASELINE_DIR ${PARAVIEW_TEST_BASELINE_DIR}
     TEST_SCRIPTS ${GMV_READER_TESTS}
+    TEST_DATA_TARGET ParaViewData
     LOAD_PLUGIN "GMVReader"
   )
-  SET_PROPERTY(TEST "pvcs.GMVReaderInvalidFiles${_SUFFIX}" PROPERTY PASS_REGULAR_EXPRESSION "server process exited with code 0")
-ENDIF ()
+  set_property(TEST "pvcs.GMVReaderInvalidFiles${suffix}"
+    PROPERTY
+      PASS_REGULAR_EXPRESSION "server process exited with code 0")
+endif ()
